# cfgmk

./: Cargo.toml  README.md
src/: archive.rs  lib.rs  main.rs  parser.rs  walk.rs
src/filter/: cat.rs  mod.rs  simple.rs
src/parser/: rulesfile.pest
tests/: walk.rs
tests/parser/: basic
tests/walk/sub/: Rules
