[package]
name = "cfgmk"
version = "0.1.0"
authors = ["Hank Donnay <hdonnay@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
structopt = "0.2"
tar = "0.4"
walkdir = "2"
chrono = "0.4"
trimmer = "0.3.6"
serde = "1.0"
serde_yaml = "0.8"

